sessions/18-cni-networking/subsessions/06-network-policy/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cni-lab
  labels:
    session: cni-networking
