sessions/18-cni-networking/subsessions/06-network-policy/03-default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cni-lab
spec:
  podSelector: {}
  policyTypes:
    - Ingress
